CSM bunch of updates

--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -128,6 +128,8 @@
            value="Sacrifices adjacent unit to fully restore Lord's health and morale of nearby units. Temporary increases Lord's damage output."/>
     <entry name="ChaosSpaceMarines/DeathEcstasyFlavor"
            value="Death is but another thrilling experience, and the Emperor’s Children are loathe to deny the enemy such vistas of ecstatic sensation."/>
+    <entry name="ChaosSpaceMarines/DeferredAbsolutionDescription"
+           value="Increases the invulnerable damage reduction of adjacent allied vehicle units."/>
     <entry name="ChaosSpaceMarines/IconOfDespairDescription"
            value="Icon of Chaos that increases the melee damage reduction to a unit with Mark of Nurgle."/>
     <entry name="ChaosSpaceMarines/KhorneCorruption"
