--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -303,8 +303,10 @@
     <entry name="FlaredFlavor"
            value="This attack looses a brilliant flare of light, searing the sight of the victim and forcing him to fight blind for a few moments."/>
 
-    <entry name="IronWill" value="Cadia Stands!"/>
-    <entry name="IronWillDescription" value="Increases the armour."/>
+    <entry name="IronWill"
+           value="Cadia Stands!"/>
+    <entry name="IronWillDescription"
+           value="Increases the armour."/>
 
     <entry name="MannedWeaponGhostArk"
            value="Manned Weapon"/>
@@ -685,6 +687,22 @@
     <entry name="SistersOfBattle/VerseOfHolyPietyFlavor"
            value="Pray is stronger than any sword. As the sanctified words of the Order’s holy tenets are roared across the battlefield, the devout are infused with the Emperor’s blessings."/>
 
+    <entry name="SmallBlind"
+           value="Blind"/>
+    <entry name="SmallBlindDescription"
+           value="Reduces the accuracy."/>
+    <entry name="SmallBlindFlavor"
+           value="This attack looses a brilliant flare of light, searing the sight of the victim and forcing him to fight blind for a few moments."/>
+    <entry name="SmallBlinding"
+           value="Blinding"/>
+    <entry name="SmallBlindingDescription"
+           value="Reduces the accuracy of the target infantry or monstrous creature unit."/>
+    <entry name="SmallDaemon"
+           value="Daemon"/>
+    <entry name="SmallDaemonDescription"
+           value="Increases the damage reduction."/>
+    <entry name="SmallDaemonFlavor"
+           value="The creatures of the Warp are many and foul, with infinite variety, but there are some characteristics that they all share."/>
     <entry name="SmokeScreenDescription"
            value="Decreases opponent's ranged accuracy."/>
 
