--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -130,6 +130,8 @@
            value="Death is but another thrilling experience, and the Emperor’s Children are loathe to deny the enemy such vistas of ecstatic sensation."/>
     <entry name="ChaosSpaceMarines/DeferredAbsolutionDescription"
            value="Increases the invulnerable damage reduction of adjacent allied vehicle units."/>
+    <entry name="ChaosSpaceMarines/IconOfExcessDescription"
+           value="Icon of Chaos that grants negation of the movement penalty in forests, imperial ruins and rivers to a unit with Mark of Slaanesh."/>
     <entry name="ChaosSpaceMarines/IconOfDespairDescription"
            value="Icon of Chaos that increases the melee damage reduction to a unit with Mark of Nurgle."/>
     <entry name="ChaosSpaceMarines/KhorneCorruption"
