--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -133,7 +133,7 @@
     <entry name="ChaosSpaceMarines/IconOfExcessDescription"
            value="Icon of Chaos that grants negation of the movement penalty in forests, imperial ruins and rivers to a unit with Mark of Slaanesh."/>
     <entry name="ChaosSpaceMarines/IconOfDespairDescription"
-           value="Icon of Chaos that increases the melee damage reduction to a unit with Mark of Nurgle."/>
+           value="Icon of Chaos that increases the hitpoints regeneration to a unit with Mark of Nurgle."/>
     <entry name="ChaosSpaceMarines/KhorneCorruption"
            value="Khorne Corruption"/>
     <entry name="ChaosSpaceMarines/KhorneCorruptionDescription"
