Believers of The True Faith debuffed

--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -169,7 +169,7 @@
     <entry name="ChaosSpaceMarines/BelieversOfTheTrueFaith"
            value="Believers Of The True Faith"/>
     <entry name="ChaosSpaceMarines/BelieversOfTheTrueFaithDescription"
-           value="Increases Chaos Cultists attacks and hit points. Chaos Cultists are free to build and have no upkeep."/>
+           value="Chaos Cultists are free to build and have no upkeep."/>
     <entry name="ChaosSpaceMarines/BelieversOfTheTrueFaithFlavor"
            value="Though each selfishly sees faith as an easy route to power in on uncaring galaxy, these mortals are zealous worshippers brimming with hate."/>
     <entry name="ChaosSpaceMarines/DarkDiscipleDescription"
