--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -167,7 +167,7 @@
     <entry name="ChaosSpaceMarines/SmokeLauncher"
            value="Hammer Of Wrath / Smoke Launcher"/>
     <entry name="ChaosSpaceMarines/SmokeLauncherDescription"
-           value="Grants Daemon Princes, Defilers, Forgefiends, Helbrutes, Maulerfiends, Venomcrawlers and Warp Talons the ability to perform more devastating attacks. Grants Chaos Rhinos, Defilers and Chaos Land Raiders the ability to launch a smoke screen that increases the ranged damage reduction. Increases allied Chaos Space Marine vehicles regeneration."/>
+           value="Grants Defilers, Helbrutes, Maulerfiends and Great Brass Scorpions the ability to perform more devastating attacks. Grants Chaos Rhinos, Defilers and Chaos Land Raiders the ability to launch a smoke screen that increases the ranged damage reduction. Increases allied Chaos Space Marine vehicles regeneration."/>
     <entry name="ChaosSpaceMarines/TheBlackCitadel"
            value="The Black Citadel"/>
     <entry name="ChaosSpaceMarines/TheBlackCitadelDescription"
