--- a/Mod/Data/Core/Languages/English/Weapons.xml
+++ b/Mod/Data/Core/Languages/English/Weapons.xml
@@ -66,4 +66,6 @@
            value="Forgefiend Autocannon"/>
     <entry name="ForgefiendAutocannonFlavor"
            value="<string name='Weapons/HadesAutocannonFlavor'/>"/>
+    <entry name="DeathPact"
+           value="Death Pact"/>
 </language>
