--- a/Mod/Data/Core/Languages/English/Features.xml
+++ b/Mod/Data/Core/Languages/English/Features.xml
@@ -16,4 +16,8 @@
            value="<string name='Traits/ShatteredDefences'/>"/>
     <entry name="ShatteredDefencesDescription"
            value="<string name='Traits/ShatteredDefencesDescription'/>"/>
+    <entry name="CursedGround"
+           value="Cursed Ground"/>
+    <entry name="CursedGroundDescription"
+           value="Feature that ends the movement of a unit and applies damage over time debuff to the enemy."/>
 </language>
